--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,29 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Buy and sell single-family homes in minutes."
     />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Roofstock onChain" />
+    <meta
+      property="og:description"
+      content="Buy and sell single-family homes in minutes."
+    />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/images/og-image.png"
+      data-rh="true"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="%PUBLIC_URL%" />
+    <meta property="twitter:url" content="%PUBLIC_URL%" />
+    <meta name="twitter:title" content="Roofstock onChain" />
+    <meta
+      name="twitter:description"
+      content="Buy and sell single-family homes in minutes."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/og-image.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Roofstock onChain</title>
